--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,8 +38,8 @@
   <div
     class="p-5 text-center bg-image"
     style="
-      background-image: url('https://scontent.fsin14-1.fna.fbcdn.net/v/t1.6435-9/80950974_3904879939538145_3777027096602214400_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=e3f864&_nc_ohc=zeTTOEawASgAX9CLaVn&_nc_ht=scontent.fsin14-1.fna&oh=00_AT9McY9d00-XsFTDWQmIHVP3EbqFKhfahZltmhovFQYafQ&oe=63244361');
-      height: 400px;
+      background-image: url('https://pbs.twimg.com/media/FndUczXaYAAevmm?format=jpg&name=small');
+      height: 1200px;
     "
   >
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
